--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
@@ -16,8 +16,8 @@
   <body class="page">
     <header class="header-block">
       <div class="header-logo">
-        <h1 class="header-logo-title">&lt;/HTML&gt;</h1>
-        <h2 class="header-logo-description">закрывающий тег</h2>
+        <span class="header-logo-title">&lt;/HTML&gt;</span>
+        <h1 class="header-logo-description">закрывающий тег</h1>
       </div>
     </header>
     <main class="main">
@@ -42,7 +42,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -69,7 +69,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -96,7 +96,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -123,7 +123,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -150,7 +150,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -177,7 +177,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -204,7 +204,7 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class=" button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -231,31 +231,31 @@
               <path class="sparks" d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z" fill="var(--animation-fill-color)"/>
             </svg>
           </button>
-          <button type="button" class="card__like-button button-standard button">
+          <button type="button" class="button-black-bg card__like-button button-standard">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
 
-      <footer class="footer">
-        <button class="footer-button button-standard" type="button" onclick="window['dialog-id'].showModal()"  aria-controls="dialog-id">
-          <svg class="footer-button-picture" viewBox="0 0 39 39">
+      <div class="section-button-save">
+        <button class="button-save button-standard button-black-bg" type="button" onclick="window['dialog-id'].showModal()"  aria-controls="dialog-id">
+          <svg class="button-save-picture" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
-          <span class="footer-button-text">Сохранить на память</span>
+          <span class="button-save-text">Сохранить на память</span>
         </button>
-      </footer>
+      </div>
     </main>
     <dialog id="dialog-id">
       <div class="dialog">
-        <div class="dialog-TextAndPicture">
+        <div class="dialog-text-and-picture">
           <svg class="dialog-picture" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
           <p class="dialog-text">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <form method="dialog">
-          <button class="dialog-close button-standard">
+        <form method="dialog" class="dialog-button">
+          <button class="dialog-close button-standard button-black-bg" type="submit">
             <span class="dialog-button__text">ок</span>
           </button>
         </form>
